<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hubble</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hubble_icon">hubble icon</string>
    <string name="drawer_image">drawer_image</string>
    <string name="temp">temporary placement</string>
    <string name="app_not_available">App Unavailable</string>
    <string name="unloaded_text">unable to load text</string>

    <!-- Activities -->
    <string name="title_activity_account_creation">AccountCreation</string>

    <!-- Account creation/Login -->
    <string name="email_hint">email address</string>
    <string name="username_hint">user name</string>
    <string name="password_hint">password</string>
    <string name="confirmpass_hint">confirm password</string>
    <string name="login">Log in</string>
    <string name="create_account">Create new account</string>
    <string name="sign_up">Sign up</string>
    <string name="mainlogo">Full Hubble Logo</string>
    <string name="login_fail">Incorrect login info. Try again.</string>
    <string name="title_activity_hub_index">Hub Index</string>
    <string name="success_login_dialog">You have succcessfully created an account.\nGo ahead and log in!</string>
    <string name="ok">OK</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Hub Index -->
    <string-array name="menu_items">
        <item>Help</item>
        <item>Settings</item>
        <item>Saved</item>
        <item>Exit</item>	
    </string-array>
	
    <string name="menu_row_icon_desc">Menu row icon</string>
    <string name="menu">Menu</string>
    <string name="create">Create</string>
    <string name="row_image_desc">row image</string>
    <string name="no_results">No hubs found</string>

    <!-- Create Hub -->
    <string name="hubname">Hub Name</string>
    <string name="name_help">(100 characters max.)</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_help">(Select one)</string>
    <string name="hubpassword">Password</string>
    <string name="max_users">Max Users</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="hub_size">Hub Size</string>
    <string name="small">Small</string>
    <string name="small_help">(100m radius)</string>
    <string name="medium">Medium</string>
    <string name="medium_help">(500m radius)</string>
    <string name="large">Large</string>
    <string name="large_help">(1km radius)</string>
    <string name="xlarge">X-Large</string>
    <string name="xlarge_help">(5km radius)</string>
    <string name="title_activity_create_hub">Create Hub</string>
    <string name="create_hub">Create Hub</string>
    <string name="s_public">Public</string>
    <string name="s_private">Private</string>
	<string name="lock_image">lock image</string>
    <string-array name="radius">
        <item>Small (theatre), 100m radius</item>
        <item>Medium (mall), 500m radius</item>
        <item>Large (campus/district), 1km radius</item>
        <item>XLarge (city), 5km radius</item>
    </string-array>
	
    <!-- Chat -->
    <string name="title_activity_chat">Chat</string>
    <string name="write_message">Send Message</string>
    <string name="chat_send">send</string>

</resources>
