<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".CreateHub" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">"

        <TextView
            style="@style/StandardLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hubname" />

        <TextView
            style="@style/StandardSupportLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_help" />

    </LinearLayout>

    <EditText
        android:id="@+id/hubname"
        style="@style/MessageEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text" />

	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/StandardLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy" />

        <TextView
            style="@style/StandardSupportLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_help" />

    </LinearLayout>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	<LinearLayout
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:src="@drawable/unlock_image"
	        android:contentDescription="@string/lock_image"/>
	    <RadioButton android:id="@+id/radio_public"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/s_public"/>
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:src="@drawable/lock_image"
	        android:contentDescription="@string/lock_image"/>
	    <RadioButton android:id="@+id/radio_private"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/s_private"/>
	</LinearLayout>
	</RadioGroup>

	<EditText style="@style/MessageEditText"
        android:id="@+id/hub_password"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:includeFontPadding="false"
        android:textSize="12sp"
        android:hint="@string/hubpassword"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/StandardLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_users" />

        <TextView
            style="@style/StandardSupportLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_help" />

    </LinearLayout>
    <RadioGroup
        android:id="@+id/max_user_radio"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <RadioButton android:id="@+id/radio_five"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="20dp"
	        android:text="@string/five"/>
	    <RadioButton android:id="@+id/radio_ten"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="20dp"
	        android:text="@string/ten"/>
	    <RadioButton android:id="@+id/radio_fifteen"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="20dp"
	        android:text="@string/fifteen"/>
	</RadioGroup>
	
    <TextView
        style="@style/StandardLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hub_size" />
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <RadioButton android:id="@+id/small_size"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/small"/>
	    <TextView
            style="@style/StandardSupportLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_help" />
	    <RadioButton android:id="@+id/medium_size"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/medium"/>
	    <TextView
            style="@style/StandardSupportLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_help" />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <RadioButton android:id="@+id/large_size"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/large"/>
	    <TextView
            style="@style/StandardSupportLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_help" />
	    <RadioButton android:id="@+id/xlarge_size"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/xlarge"/>
	    <TextView
            style="@style/StandardSupportLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xlarge_help" />
	</LinearLayout>
    
    <Button style="@style/BlueRim"
        android:id="@+id/create_hub_button"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:background="@drawable/bluefill"
        android:text="@string/create_hub"
        android:textColor="@color/darkblue"
        android:onClick="submitHub" />

</LinearLayout>
