<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountCreation" >
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="35dp"
        android:background="@drawable/hubble_icon"
        android:contentDescription="@string/mainlogo" />
    
    <EditText style="@style/BlueRim"
        android:id="@+id/c_email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />
    
    <EditText style="@style/BlueRim"
        android:id="@+id/c_username"
        android:hint="@string/username_hint"
        android:inputType="text"/>

    <EditText style="@style/BlueRim"
        android:id="@+id/c_password"
        android:hint="@string/password_hint"
        android:inputType="textPassword" 
        android:textAppearance="@style/BoxText"/>
    
    <EditText style="@style/BlueRim"
        android:id="@+id/l_password"
        android:hint="@string/confirmpass_hint"
        android:inputType="textPassword" />

    <Button style="@style/BlueRim"
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:background="@drawable/bluefill"
        android:text="@string/sign_up"
        android:textColor="@color/darkblue" />

    
</LinearLayout>
