<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Title" >
	
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center"
        android:contentDescription="@string/mainlogo"
        android:background="@drawable/mainlogo"/>
    
    <TextView style="@style/FadedNotif"
        android:id="@+id/login_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_fail"
        android:visibility="gone" />

    <EditText style="@style/BlueRim"
        android:id="@+id/l_username"
        android:hint="@string/username_hint"
        android:inputType="text"/>

    <EditText style="@style/BlueRim"
        android:id="@+id/l_password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:fontFamily="sans-serif" />

    <Button style="@style/BlueRim"
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:background="@drawable/bluefill"
        android:text="@string/login"
        android:textColor="@color/darkblue"
        android:onClick="login" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white_overlay"
        android:textColor="#153272"
        android:text="@string/create_account"
        android:onClick="createAccount" />

</LinearLayout>